test/good/conversions/string3.px

print 'c'.toString() * 3
print true.toString() + " " + false.toString().toString().length.toString()
