test/bad/strings/format03.px

"{42}..{+3*false}"
